[gd_scene load_steps=4 format=3 uid="uid://gaeau15omfc6"]

[ext_resource type="Texture2D" uid="uid://1svf500u0p0v" path="res://sprites/laserBlade.png" id="1_dwhui"]
[ext_resource type="Script" path="res://laser_sword.gd" id="1_omrll"]
[ext_resource type="Script" path="res://attacks_script.gd" id="2_15tcb"]

[node name="StaticBody2D" type="StaticBody2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_omrll")

[node name="damage_zone" type="Area2D" parent="."]
position = Vector2(-16.6667, 0)
collision_layer = 4
collision_mask = 10
script = ExtResource("2_15tcb")

[node name="damage_zone_hitbox" type="CollisionPolygon2D" parent="damage_zone"]
polygon = PackedVector2Array(-28, -25, -10, -18, -2, -7, -2, 6, -9, 17, -27, 25, -3, 24, 17, 11, 20, 0, 18, -8, 10, -18, -4, -23)

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
texture = ExtResource("1_dwhui")

[node name="cd" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="damage_zone" to="." method="_on_damage_zone_area_entered"]
[connection signal="body_entered" from="damage_zone" to="." method="_on_damage_zone_body_entered"]
[connection signal="timeout" from="cd" to="." method="_on_cd_timeout"]
